Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
Qt Creator 6.0.2
-
None
-
-
137d3367cf (qt-creator/qt-creator/7.0) 137d3367cf (qt-creator/qt-creator/master) 137d3367cf (qt-creator/qt-creator/qds-3.3)
Description
I'm hitting a segfault in Qt Creator 6.0.2 when triggering the Doxygen brief description generation ("/**" + <Enter>), unfortunately I don't have the debug symbols so this is the best gdb could come up with:
Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault. 0x00007fffb98c141f in ?? () from /home/cmannett85/workspace/Qt/Tools/QtCreator/lib/qtcreator/plugins/libCppEditor.so
Not very useful, I know. This is the snippet of code of that triggered it:
/** <-- Bang! template <typename... Parents> [[nodiscard]] std::size_t pre_parse_phase( vector<parsing::token_type>& result, span<const char*>& args, [[maybe_unused]] const parsing::token_list& tokens, [[maybe_unused]] const Parents&... parents) const
Although the real code is inside a namespaced class, I can still trigger it using the above when copied into the global namespace - so it doesn't appear to be context-driven and therefore should be reproducible by others.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-27278 Crash when trying to comment a concept
-
- Closed
-