CppEditor: Do not crash on doxygen comment creation

... for templates that were not parsed entirely successfully.
Amends a437539096.

Fixes: QTCREATORBUG-27207
Change-Id: I4d7935b30cac9ce14f442977d07417a343ecae11
Reviewed-by: Christian Stenger <christian.stenger@qt.io>